--- a/template/child.html
+++ b/template/child.html
@@ -3,3 +3,9 @@
 {% block title %}
   <title>Child HTML files</title>
 {% endblock  %}
+
+{% block body_block  %}
+  <body>
+    <h2>Welcome to child.html</h2>
+  </body>
+{% endblock  %}
